--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 							<h3 class="masthead-brand"><a href="index.html">gongy</a></h3>
 							<nav>
 								<ul class="nav masthead-nav">
-									<li class="active"><a href="index.html">home</a></li>
-									<li><a href="marker.html">marker</a></li>
+									<li class="active"><a href="gongy.me">home</a></li>
+									<li><a href="http://mark.gongy.me">marker</a></li>
+									<li><a href="http://cal.gongy.me">calendar</a></li>
 									<li><a href="contact.html">contact</a></li>
 								</ul>
 							</nav>
@@ -42,12 +43,12 @@
 
 					<div class="inner cover">
 						<p class="cover-lead">exam marker</p>
-						<p class="lead"><a href="marker.html" class="btn btn-lg btn-default">mark exams</a></p>
+						<p class="lead"><a href="http://mark.gongy.me" class="btn btn-lg btn-default">mark exams</a></p>
 						<br>
 						<br>
 						<br>
 						<p class="cover-lead">contest calendar</p>
-						<p class="lead"><a href="#" class="btn btn-lg btn-default">find contests</a></p>
+						<p class="lead"><a href="http://cal.gongy.me" class="btn btn-lg btn-default">find contests</a></p>
 					</div>
 
 					<div class="mastfoot">
