--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<nav>
 								<ul class="nav masthead-nav">
 									<li class="active"><a href="gongy.me">home</a></li>
-									<li><a href="https://mark.gongy.me">marker</a></li>
-									<li><a href="https://cal.gongy.me">calendar</a></li>
+									<li><a href="http://mark.gongy.me">marker</a></li>
+									<li><a href="http://cal.gongy.me">calendar</a></li>
 									<li><a href="contact.html">contact</a></li>
 								</ul>
 							</nav>
@@ -43,12 +43,12 @@
 
 					<div class="inner cover">
 						<p class="cover-lead">exam marker</p>
-						<p class="lead"><a href="https://mark.gongy.me" class="btn btn-lg btn-default">mark exams</a></p>
+						<p class="lead"><a href="http://mark.gongy.me" class="btn btn-lg btn-default">mark exams</a></p>
 						<br>
 						<br>
 						<br>
 						<p class="cover-lead">contest calendar</p>
-						<p class="lead"><a href="https://cal.gongy.me" class="btn btn-lg btn-default">find contests</a></p>
+						<p class="lead"><a href="http://cal.gongy.me" class="btn btn-lg btn-default">find contests</a></p>
 					</div>
 
 					<div class="mastfoot">
@@ -65,7 +65,6 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
-		<script src="assets/js/ie10-viewport-bug-workaround.js"></script>
 	</body>
 </html>
 
