improved email delivery system

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 						<p class="cover-lead">contact me</p>
 						<br>
 						<p class="lead" style="font-size:28px"><a href="#" onclick="copycopy();">
-							<font color="#acb6d6")>
+							<font color="#acb6d6") id="emailContents">
 								click to copy email
 							</font></a>
 						</p>
@@ -93,16 +93,17 @@ function copycopy() {
 		}
 	}
 	var text = link;
+	document.getElementById("emailContents").innerHTML = text;
 	if (window.clipboardData && window.clipboardData.setData) {
 		return clipboardData.setData("Text", text); 
 	} else if (document.queryCommandSupported && document.queryCommandSupported("copy")) {
 		var textarea = document.createElement("textarea");
 		textarea.textContent = text;
-		textarea.style.position = "fixed";  // Prevent scrolling to bottom of page in MS Edge.
+		textarea.style.position = "fixed";
 		document.body.appendChild(textarea);
 		textarea.select();
 		try {
-			return document.execCommand("copy");  // Security exception may be thrown by some browsers.
+			return document.execCommand("copy");
 		} catch (ex) {
 			console.warn("Copy to clipboard failed.", ex);
 			return false;
