add hsc comments.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 					</div>
 
 					<div class="inner cover">
-						<p class="cover-lead">exam marker</p>
-						<p class="lead"><a href="http://mark.gongy.me" class="btn btn-lg btn-default">mark exams</a></p>
+						<p class="cover-lead">hsc exam marker</p>
+						<p class="lead"><a href="http://mark.gongy.me" class="btn btn-lg btn-default">mark hsc exams</a></p>
 						<br>
 						<br>
 						<br>
