--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,8 @@
 							<nav>
 								<ul class="nav masthead-nav">
 									<li><a href="index.html">home</a></li>
-									<li><a href="http://mark.gongy.me">marker</a></li>
-									<li><a href="http://cal.gongy.me">calendar</a></li>
+									<li><a href="http://mark.gongy.tech">marker</a></li>
+									<li><a href="http://cal.gongy.tech">calendar</a></li>
 									<li class="active"><a href="contact.html">contact</a></li>
 								</ul>
 							</nav>
